fix checkout info breaking on small displays

--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -283,6 +283,7 @@
       }
     }
   }
+
   .main-menu-container {
     & .responsive-menu {
       max-width: 320px;
@@ -290,6 +291,14 @@
     & .header-checkout-container {
       & .header-bag-amount {
         margin: 0;
+      }
+    }
+    & .bag-product-row {
+      & > div {
+        padding: 0 8px;
+      }
+      & > div:first-child {
+        max-width: 120px;
       }
     }
   }
